<resources>
    <string name="txtBtnReclamacao">RECLAMAÇÃO</string>

    <string name="txtBtnCancelar">CANCELAR</string>

    <string name="txtCardapio">CARDÁPIO</string>

    <string name="txtLanches">Lanches</string>

    <string name="txtSalgados">Salgados</string>

    <string name="txtDoces">Doces</string>

    <string name="txtBebidas">Bebidas</string>

    <string name="BtnConfirmar">Confirmar</string>

    <string name="BtnValorTotal">Valor Total</string>

    <string name="txtCombos">Combos</string>

    <string name="txtConfirmarCancelamento">Você deseja realmente cancelar os itens selecionados?</string>


    <string name="BtnProximo">Próximo</string>

    <string name="txtSim">SIM</string>
    <string name="txtNao">NÃO</string>

    <string name="txtBtnSugestao">SUGESTÃO</string>

    <string name="txtBtnDiversos">DIVERSOS</string>

    <string name="txtBtnEnviar">ENVIAR</string>


    <string name="app_name">SnackApp</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="txtBtnFazerPedido">Fazer Pedidos</string>
    <string name="txtBtnAcompanharReservar">Acompanhar Reserva</string>
</resources>
