<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/fundotelalogin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="snackapp.com.br.snackapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75px"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"

            android:id="@+id/login"
            android:background="@drawable/fundoll"
            android:orientation="vertical">


            <View
                android:layout_width="1px"
                android:layout_height="18px"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="150px"
                    android:text=""
                    android:background="@drawable/snackappimg"
                    android:textSize="45px"
                    android:textColor="#ffffff"
                    android:textAlignment="center"/>


            </LinearLayout>


            <View
                android:layout_width="1in"
                android:layout_height="0.3in"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="0.19in"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:text="@string/txtConfirmarCancelamento"/>



            </LinearLayout>

            <View
                android:layout_width="1in"
                android:layout_height="0.2in"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FF00"
                    android:textColor="#ffffff"
                    android:textSize="30dp"
                    android:onClick="confirmarCancelamento"
                    android:textStyle="bold|italic"
                    android:text="@string/txtSim"/>

                <View
                    android:layout_width="0.3in"
                    android:layout_height="1px"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FF00"
                    android:textColor="#ffffff"
                    android:textSize="30dp"
                    android:onClick="NegarCancelamento"
                    android:textStyle="bold|italic"
                    android:text="@string/txtNao"/>



            </LinearLayout>




        </LinearLayout>






    </LinearLayout>
</RelativeLayout>
